# EXTENSION-TESTER

./: .gitignore  ACTUAL_FEATURES.md  ADVANCED_FEATURES.md  AUTOMATED_TESTING_COMPLETE.md  BADGES_UPDATE.md  BROWSER_AUTOMATION_PROOF.md  CHANGELOG.md  COMMAND_REFERENCE.txt  DOCUMENTATION_INDEX.txt  EXAMPLES.md  ExtensionTester.spec  FEATURES.md  FEATURES_OVERVIEW.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  MANIFEST.in  MODULES_REFERENCE.txt  PIPELINE_GUIDE.md  PLATFORM_ROADMAP.md  PRODUCTION_UPGRADE_PLAN.md  PROOF_BROWSER_AUTOMATION.py  QUICKSTART.md  QUICK_FIXES.md  QUICK_REFERENCE.txt  README.md  README_V2_RELEASE.txt  RELEASE_CHECKLIST.md  ROADMAP_COMPARISON.md  SETUP_COMPLETE.md  START_HERE.txt  TESTING.md  UPGRADE_COMPLETE.txt  UPGRADE_SUMMARY.md  V1_RELEASE_COMPLETE.md  V2_RELEASE_NOTES.txt  VERSION_2_UPGRADE.txt  WELCOME.txt  api_checker.py  api_usage_scanner.py  (+26 more)
.github/workflows/: release.yml  test-extension.yml  test.yml
exttester/: __version__.py  browser_tester.py  bulk_main.py  bulk_runner.py  cli.py  config.py  gui.py  linter.py  logger.py  performance_metrics.py  pipeline.py  playwright_engine.py  report_generator.py  report_pdf.py  runner.py  runtime_tester.py  scoring_engine.py  screenshotter.py  security_scanner.py  store_checker.py  summary.py  vulnerability_scanner.py
reports/: report.csv  report.html  report.json
sample-extension/: background.js  manifest.json  popup.html  popup.js
sample-extension/scripts/: content.js
sample-extension/styles/: content.css
tests/: conftest.py  test_browser_tester.py  test_integration.py  test_scanner.py  test_scoring_engine.py  test_validator.py
tests/scenarios/: smoke_test.py
